--- a/src/_includes/alfabeto.njk
+++ b/src/_includes/alfabeto.njk
@@ -20,7 +20,11 @@ article>button:hover {
 
 </style>
 
-<h1 class="w3-center w3-indigo">El abecedario español</h1>
+<div class="w3-display-container">
+	<a class="w3-display-right w3-btn" href="#indice" title="Índice">{% lucide "table-of-contents", { "stroke":"white"} %}</a>
+	<h1 class="w3-center w3-indigo">El abecedario español</h1>
+</div>
+
 <div class="w3-row">
 	<div class="w3-col l6 m6 w3-padding-largex">
 		<article class="w3-section">
