--- a/src/_includes/alfabeto.njk
+++ b/src/_includes/alfabeto.njk
@@ -21,6 +21,11 @@ article>button:hover {
 </style>
 
 <div class="w3-display-container">
+	<button class="w3-display-left w3-btn" 
+			onclick="alfabetoAudio.play();"
+			title="escuchar el alfabeto">
+			{% lucide "circle-play", { "stroke":"white"}  %}
+	</button>	
 	<a class="w3-display-right w3-btn" href="#indice" title="Índice">{% lucide "table-of-contents", { "stroke":"white"} %}</a>
 	<h1 class="w3-center w3-indigo">El abecedario español</h1>
 </div>
@@ -29,7 +34,7 @@ article>button:hover {
 	<div class="w3-col l6 m6 w3-padding-largex">
 		<article class="w3-section">
 			<h4>Escucha el abecedario</h4>
-			<audio controls>
+			<audio controls id="alfabetoAudio">
 				<source src="https://cms.babbel.news/wp-content/uploads/2020/10/Spanish-Alphabet-Fast.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio> 
