--- a/src/_includes/colores.njk
+++ b/src/_includes/colores.njk
@@ -13,20 +13,6 @@
 
 </style>
 
-{% macro xitem (number, text='', icon=true) %}
-<li>{{number}}
-	<span
-	{% if icon %}
-		style="cursor:pointer";
-		onclick="color_{{number}}.play(); false;">	{% lucide "play", {size:12} %}
-	{% else %}
-		> {% lucide "minus", {size:12} %}
-	{% endif %}
-	</span>
-	{{text}}
-</li>
-{% endmacro %}
-
 {% set classList = "w3-dark-gray w3-border-left w3-border-right w3-center w3-padding-small" %}
 
 <style>
@@ -43,7 +29,8 @@ function scrambleColors() {
 	const elemColores = document.getElementById("colorParent");
 	const listColores = elemColores.children;
 	let i, s, t;
-	for (i = 0; i < 100; i++) {
+	listColores[0].parentNode.insertBefore(listColores[0], listColores[1]);
+	for (i = 0; i < 20; i++) {
 		s = getRandomInt(0, listColores.length);
 		t = getRandomInt(0, listColores.length);
 		if (s != t) {
@@ -62,7 +49,7 @@ function scrambleColors() {
 <div id="colorParent" class="w3-row-padding w3-stretch w3-wide">
 	{% for item in colores.list %}
 	<article id="color_{{ loop.index0}}" class = "w3-col s6 m4 l3">
-		<div class="w3-card-4 w3-{{ item.name | lower }} w3-display-container"
+		<div class="w3-card-4 w3-{{ item.name | lower }} w3-display-container w3-round-xlarge"
 			 style="margin:12px 8px;height:96px;cursor:pointer"
 			 onclick="color_{{item.name}}.play(); false;"
 		>
@@ -71,7 +58,7 @@ function scrambleColors() {
 			{% if item.feminine %}<br>{{ item.feminine }} {% endif %}
 			</div>
 			<div class="w3-display-right" style="cursor:progress;margin-right:8px;">
-				{% lucide "play" %}
+				{% lucide "circle-play" %}
 			</div>
 		</div>
 	</article>
