--- a/src/_includes/alfabeto.njk
+++ b/src/_includes/alfabeto.njk
@@ -24,7 +24,7 @@ article>button:hover {
 	<button class="w3-display-left w3-btn" 
 			onclick="alfabetoAudio.play();"
 			title="escuchar el alfabeto">
-			{% lucide "circle-play", { "stroke":"white"}  %}
+			{% lucide "volume-2", { "stroke":"white"}  %}
 	</button>	
 	<a class="w3-display-right w3-btn" href="#indice" title="Índice">{% lucide "table-of-contents", { "stroke":"white"} %}</a>
 	<h1 class="w3-center w3-indigo">El abecedario español</h1>
