--- a/src/_includes/colores.njk
+++ b/src/_includes/colores.njk
@@ -41,7 +41,7 @@ function scrambleColors() {
 </script>
 
 <div class="w3-display-container">
-	<button class="w3-display-left w3-btn" onclick="scrambleColors();">{% lucide "dices", { "stroke":"white"}  %}</button>
+	<button id="colorDice" class="w3-display-left w3-btn" onclick="scrambleColors();">{% lucide "dices", { "stroke":"white"}  %}</button>
 	<a class="w3-display-right w3-btn" href="#indice" title="Índice">{% lucide "table-of-contents", { "stroke":"white"}  %}</a>
 	<h1 class="w3-center w3-deep-orange">Los colores</h1>
 </div>
@@ -58,7 +58,7 @@ function scrambleColors() {
 			{% if item.feminine %}<br>{{ item.feminine }} {% endif %}
 			</div>
 			<div class="w3-display-right" style="cursor:progress;margin-right:8px;">
-				{% lucide "circle-play" %}
+				{% lucide "volume-2" %}
 			</div>
 		</div>
 	</article>
