--- a/src/_layouts/markdown.njk
+++ b/src/_layouts/markdown.njk
@@ -14,6 +14,24 @@ version: 2024-09-15
 .markdown a:hover {
 	font-weight: bold;
 }
+
+.date {
+	float:right;
+	margin: -28px -16px 0 0;
+	padding: 8px 32px 8px;
+	letter-spacing:4px;
+	background: #ccc;
+	width2:52%
+}
+.note {
+	float:none;
+	margin: -28px 0 0 -16px;
+	padding: 8px 32px 8px;
+	letter-spacing:4px;
+	background: #ffeb3b;
+	width:100%
+}
+
 </style>
 
 <header id="header" class="w3-hide">
