--- a/src/utillaje.njk
+++ b/src/utillaje.njk
@@ -5,20 +5,20 @@ description: "Startseite"
 
 apps:
  - caption: Mondly
+   logo: mondly
    type: mobile-app
-   img: logo.mondly.svg
    url: https://www.mondly.com
- - caption: duolingo
+ - caption: DuoLingo
+   logo: duolingo
    type: mobile-app
-   img: logo.duolingo.svg
    url: https://www.duolingo.com/
  - caption: Memrise
+   logo: memrise
    type: mobile-app
-   img: logo.memrise.svg
    url: https://www.memrise.com
  - caption: "Babbel"
    type: mobile-app
-   img: logo.babbel.svg
+   logo: babbel
    url: https://www.babbel.com/
  - caption: "Grammar"
    type: ebook
@@ -26,12 +26,17 @@ apps:
    type: blog
  - caption: Word Reference
    type: dictionary
-   url: https://www.wordreference.com/esde
+   url: https://www.wordreference.com
+   url2: https://www.wordreference.com/esde
+ - caption: Dict. Leo
+   logo: dict-leo
+   type: dictionary
+   url: https://dict.leo.org/spanish-english/
  
 ---
 
-{% macro image (name) %}
-"{{site.imagedir}}/{{name}}"
+{% macro image (name, type="type", ext="svg") %}
+"{{site.imagedir}}/{{type}}.{{name}}.{{ext}}"
 {% endmacro %}
 
 
@@ -47,13 +52,12 @@ apps:
 <main class="w3-container">
 	<section class="w3-row-padding">
 		{% for app in apps %}
-		<article class="w3-mobile w3-col l3 m6 ">
-			<div class="w3-panel w3-border w3-card" style="margin:16px;height:200px;line-height:68px">
-				<img src={{ image('type.'+app.type+'.svg') }} class="w3-right w3-margin-top" style="height:36px;">
-				<img src={{ image(app.img) }} class="w3-left w3-margin-top" style="max-height:46px;max-width:120px">
-				&nbsp;
-				<h2 class="w3-topbar">{{ app.caption }}</h2>
+		<article class="w3-mobile w3-col l4 m6 ">
+			<div class="w3-panel w3-border w3-card" style="margin:16px;height:200px;line-height:60px">
+				<img src={{ image(app.logo, 'logo') }} class="w3-right w3-margin-top" style="max-height:48px">
+				<h2 class="w3-bottombar">{{ app.caption }}</h2>
 			</div>
+				<img src={{ image(app.type, 'type') }} class="w3-right w3-margin-top" style="height:36px;">
 		</article>
 		{% endfor %}
 			<img src="static/pagelogo.svg">
