--- a/src/_includes/calendario.njk
+++ b/src/_includes/calendario.njk
@@ -6,14 +6,15 @@
 
 {% macro itemPlay (type, name, noun, icon=true) %}
 <li>
-	<span
 	{%- if icon %}
-		onclick="{{ type }}_{{name}}.play(); false;"
-		style="cursor:progress";
-		> {% lucide "volume", {size:12} %}
+	<b onclick="{{ type }}_{{name}}.play(); false;"
+		  style="cursor:pointer";>
+		{% lucide "volume", {size:12} %}
+		{{noun}}
+	</b>
+	{% else %}
+	{{noun}}
 	{% endif -%}
-	</span>
-	<b>{{noun}}</b>
 </li>
 {% endmacro %}
 
