update: ferrocarril de espanol

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,6 +9,8 @@ menu:
       modal: "popup_sections"
     - caption: utillaje
       target: utillaje.html
+    - caption: ponencia
+      target: ponencia/index.html
 
 sections:
   - "sobre"
