--- a/src/_library/colors.css
+++ b/src/_library/colors.css
@@ -2,6 +2,7 @@
  *	colors.css 
  *
  *	Copyright 2024 Michael Stumpp (michael@stumpp.name)
+ * Korrekturen 18.12.2024
  *
  */
 
@@ -34,8 +35,8 @@
 .w3-text-lime,.w3-hover-text-lime:hover{color:var(--lime-400)!important}
 .w3-border-lime,.w3-hover-border-lime:hover{border-color:var(--lime-400)!important}
 /** Ergänzung der Farben 'pale-lime' und 'dark-lime' **/
-.w3-pale-lime,.w3-hover-pale-lime:hover{color:#000!important;background-color:var(--pale-lime-200)!important}
-.w3-text-pale-lime,.w3-hover-text-pale-lime:hover{color:var(--pale-lime-200)!important}
+.w3-pale-lime,.w3-hover-pale-lime:hover{color:#000!important;background-color:var(--lime-200)!important}
+.w3-text-pale-lime,.w3-hover-text-pale-lime:hover{color:var(--lime-200)!important}
 .w3-border-pale-lime,.w3-hover-border-pale-lime:hover{border-color:var(--lime-200)!important}
 .w3-dark-lime,.w3-hover-dark-lime:hover{color:#fff!important;background-color:#var(--lime-700)!important}
 .w3-text-dark-lime,.w3-hover-text-dark-lime:hover{color:#var(--lime-700)!important}
@@ -51,12 +52,12 @@
 .w3-text-pale-stone,.w3-hover-text-pale-stone:hover{color:var(--stone-200)!important}
 .w3-border-pale-stone,.w3-hover-border-pale-stone:hover{border-color:var(--stone-200)!important}
 
-.w3-stone,.w3-hover-stone:hover{color:#000!important;background-color:#var(--stone-500)!important}
-.w3-text-stone,.w3-hover-text-stone:hover{color:#var(--stone-500)!important}
-.w3-border-stone,.w3-hover-border-stone:hover{border-color:#var(--stone-500)!important}
+.w3-stone,.w3-hover-stone:hover{color:#000!important;background-color:var(--stone-500)!important}
+.w3-text-stone,.w3-hover-text-stone:hover{color:var(--stone-500)!important}
+.w3-border-stone,.w3-hover-border-stone:hover{border-color:var(--stone-500)!important}
 
-.w3-dark-stone,.w3-hover-dark-stone:hover{color:#fff!important;background-color:#var(--stone-800)!important}
-.w3-text-dark-stone,.w3-hover-text-dark-stone:hover{color:#var(--stone-800)!important}
-.w3-border-dark-stone,.w3-hover-border-dark-stone:hover{border-color:#var(--stone-800)!important}
+.w3-dark-stone,.w3-hover-dark-stone:hover{color:#fff!important;background-color:var(--stone-800)!important}
+.w3-text-dark-stone,.w3-hover-text-dark-stone:hover{color:var(--stone-800)!important}
+.w3-border-dark-stone,.w3-hover-border-dark-stone:hover{border-color:var(--stone-800)!important}
 
 /*** ************************************************************** ***/
