--- a/src/_library/main.css
+++ b/src/_library/main.css
@@ -1,1 +1,68 @@
-* { box-sizing: border-box; }
+:root {
+	--headsize: 56px;
+	--footsize: 40px;
+}
+
+* {
+	box-sizing: border-box; 
+}
+
+html,body{font-family: Inter, ui-sans-serif, system-ui, sans-serif;}html{overflow-x:hidden}
+
+header, main, footer {
+}
+
+header, footer {
+	position:fixed;
+	width:100%;
+	z-index:1;
+	background-color: var(--lime-100);
+	padding-left:1em;
+	letter-spacing:2px;
+	color:var(--stone-500)
+}
+header {
+	top:0;
+	height: var(--headsize);
+	& img {
+		width:36px;
+	}
+}
+footer {
+	height: var(--footsize);
+	bottom:0;
+}
+main {
+	margin-left:1em;
+	margin-top: var(--headsize);
+}
+h1,h2,h3,h4,h5,h6,p { 
+	font-family: Inter, ui-sans-serif, system-ui, sans-serif;
+	font-feature-settings: normal; /* 5 */
+	font-variation-settings: normal; /* 6 */
+}
+h1{font-size:23px}h2{font-size:19px}h3{font-size:17px}h4{font-size:16px}h5{font-size:14px}h6{font-size:13px}
+h1,h2,h3,h4,h5,h6 { 
+	font-weight:600;
+}
+
+.impressum {
+	font-family:Consolas,"courier new";
+	font-size:16px;
+
+	word-wrap:break-word;
+}
+
+.panel {
+	background-color: var(--lime-500);
+	color: var(--lime-50);
+	font-weight:900;
+	margin:16px;
+	padding:16px 32px;
+	position:fixed;
+	width:auto;
+	bottom:72px;
+	bottom:calc(var(--footsize) + 32px);
+}
+
+/* borrowed from TAILWIND */
