--- a/src/impressum.njk
+++ b/src/impressum.njk
@@ -1,26 +1,28 @@
 ---
 layout: main.njk
 permalink: "{{ page.filePathStem }}.html"
-title: Impressum
+title: -hwn- Impressum
 description: Impressum der -hwn- Software GmbH i.L.
 date: 2020-12-31
 infoTag: HTML-Dokument
+panel: yes
 ---
 
-<div class="w3-text-stone" style="letter-spacing:1px;line-height:1.6em">
-<pre><code>
-	<b>-hwn- Software GmbH i.L.</b>
-	Bertha-von-Suttner-Str. 18
-	16515 Oranienburg
-	Tel. 03301 397731
-	Fax  03301 397730
-	Mail info@hwn.de
-</code></pre>
+<div style="padding:8px 16px;">
+	<div class="w3-text-stone impressum">
+		<pre>
+<b>-hwn- Software GmbH i.L.</b>
+Bertha-von-Suttner-Str. 18
+16515 Oranienburg
+<i>Tel.</i> 03301 397731
+<i>Fax</i>  03301 397730
+<i>Mail</i> info@hwn.de
 
-<pre><code>
-	Sitz der Gesellschaft: Oranienburg
-	Handelsregister: HRB 7939 Amtsgericht Neuruppin
-	Liquidator: Michael Stumpp
-	USt.ID: DE 216062528
-</code></pre>
+Sitz der Gesellschaft: Oranienburg
+Handelsregister: HRB 7939 Amtsgericht Neuruppin
+Liquidator: Michael Stumpp
+USt.ID: DE 216062528
+		</pre>
+	</div>
+
 </div>
